2008-03-12  Boyd Timothy <btimothy@gmail.com> 

	* Initial check in of Tasque to GNOME SVN.

2008-03-11  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/tasque-22.png, data/images/tasque-32.png,
	  data/images/tasque-24.png, data/images/tasque-16.png,
	  data/images/tasque-48.png, MAINTAINERS: Updated graphics and new valid
	  MAINTAINERS file

2008-03-09  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Application.cs: Only use notify-sharp when enabled in configure.

2008-03-08  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskWindow.cs: Add support for keybindings to the TaskWindow, starting
	  with Ctrl+n for creating a new task.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* configure.ac: Bumping to 0.1.5.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* NEWS: Updated for the 0.1.4 release.

2008-03-07  Boyd Timothy <btimothy@gmail.com> 

	* src/TaskWindow.cs: Show "Notes..." in a tasks right-click menu.  Fix the
	  size of the delete and edit items in the menu.  Implement Edit.

2008-03-06  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Rolling back most recent changes.  Looking
	at a better way of doing this.

2008-03-06  Boyd Timothy <btimothy@gmail.com> 

	* src/TaskGroup.cs: Modify the conditional that prevents Hide ()
	  from being called for the Completed group so if a user doesn't
	  have "Show Completed Tasks" enabled, the completed group won't
	  appear.

2008-03-06  Brian Merrell <bgmerrell@gmail.com>

	* src/PreferencesDialog.cs:  Made "Task Filter" related widgets only
	sensitive after a backend has been configured.  Also added an accessible
	relationship for the backend combo box and its label.

2008-03-06  Boyd Timothy <btimothy@gmail.com> 

	* src/TaskWindow.cs: Hook up RowActivated and ButtonPressed events for the
	  overdueGroup.

2008-03-06  Boyd Timothy <btimothy@gmail.com> 

	* src/Backends/IceCore/IceCategory.cs: Added code in ContainsTask() to