@@ -22,7 +22,7 @@ namespace Tasque
 			this.Title = String.Format(Catalog.GetString("Notes for: {0:s}"), task.Name);
 			this.HasSeparator = false;
 			this.SetSizeRequest(350,320);
-			this.Icon = Utilities.GetIcon ("tasque-48", 48);
+			this.Icon = Utilities.GetIcon ("tasque-16", 16);
 			//this.Flags = Gtk.DialogFlags.DestroyWithParent;
 			
 			Gtk.ScrolledWindow sw = new Gtk.ScrolledWindow ();
